--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,26 @@
-.App {
-  text-align: center;
+.taskW { 
+
+  height:75vh;
+
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+#x::-webkit-scrollbar {
+    width: 6px;
+}
+
+#x::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    border-radius: 10px;
+}
+
+#x::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
 }
 
 @media (prefers-reduced-motion: no-preference) {
