--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,8 @@
-.taskW { 
-
-  height:75vh;
-
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+:root {
+  --blue: #6495ed;
+  --white: #faf0e6;
+  --teal:#008080;
+  --tealLight:#66b2b2;
 }
 
 #x::-webkit-scrollbar {
@@ -29,26 +25,14 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
+.App{
+  /* background-image:  
+  linear-gradient(teal, #00b09b); */
+  height: 100vh;
+  /* display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  color: white; */
 }
