--- a/src/App.css
+++ b/src/App.css
@@ -29,10 +29,10 @@
   /* background-image:  
   linear-gradient(teal, #00b09b); */
   height: 100vh;
-  /* display: flex;
+  display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white; */
+  /* align-items: center; */
+  /* justify-content: center; */
+  /* font-size: calc(10px + 2vmin); */
+  /* color: white; */
 }
